fix: fix SideBarBurger z-index

--- a/src/components/SideBar/SideBarBurger/SideBarBurger.module.css
+++ b/src/components/SideBar/SideBarBurger/SideBarBurger.module.css
@@ -2,3 +2,7 @@
     user-select: none;
     cursor: pointer;
 }
+
+.burgerWrapper {
+    z-index: 200;
+}
